- Fix capitalization of the title of the content_css setting. This fixes
  http://dev.plone.org/plone/ticket/10792.
  [dariog, davisagli]

- Protect the control panel using the "Plone Site Setup: TinyMCE" permission,
  instead of the generic "Manage portal". Also, add the Site Administrator
  role to the default roles for this permission, for forward compatibility with
  Plone 4.1.
  [davisagli]

1.1.5 (2010-11-14)
------------------

- Updated translations (de)
  [Plone translators]

- Make sure we fail gracefully on unfound UIDs when kupu isn't installed.
  [jbaldivieso]

- Removed profiles/uninstall/portal-tinymce.txt as it needlessly
  triggered a call to add_editor right before calling remove_editor.
  [maurits]

1.1.4 (2010-09-28)
------------------

- Updated translations (zh_TW)
  [Plone translators]

1.1.3 (2010-09-16)
------------------

- Updated translations
  [Plone translators]

- Fix lang and init files not loaded when @ in URL
  [jaroel]

1.1.2 (2010-08-05)
------------------

- Fix regression that broke the resolveuid transform if an `alt` attribute
  was provided.
  [davisagli]

1.1.1 (2010-07-25)
------------------

- Add styling to set the fontsize for Plone3 only. This fixes
  http://dev.plone.org/plone/ticket/10683
  [jaroel]

- Assume TinyMCE as the site's default editor if none is set. This closes
  http://dev.plone.org/plone/ticket/10810.
  [jaroel]

- Use urllib.unquote. This closes http://dev.plone.org/plone/ticket/10807.
  [jaroel]

- Apply a workaround to fix the "Paste Text" dialog.
  [davisagli]

1.1 (2010-07-23)
----------------

- If we set a description within tinymce (which is written to the `alt`
  attribute of the image tag then) we want to keep that one as image caption.
  Added check for `alt` attribute in Products.TinyMCE.transforms.parser.
  [hpeteragitator]

- In Products.TinyMCE.transforms.parser, added `full_path = unquote(full_path)`
  to remove any encoded characters from path before doing the catalog query.